# tauri-plugin-persistent-window

./: Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: error.rs  ext.rs  lib.rs  lifecycle.rs  registry.rs  reopen.rs  tray.rs
